--- a/screenshots.html
+++ b/screenshots.html
@@ -122,6 +122,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    <script data-goatcounter="https://jovarkos.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 
 </html>
