--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="canonical" href="https://jovarkos.org/contact.html">
+
 </head>
 
 <body class="d-flex flex-column">
