--- a/download.html
+++ b/download.html
@@ -21,6 +21,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="canonical" href="https://jovarkos.org/download.html">
+
 </head>
 
 <body class="d-flex flex-column">
