--- a/privacy.html
+++ b/privacy.html
@@ -22,6 +22,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="canonical" href="https://jovarkos.org/privacy.html">
+
 </head>
 
 <body class="d-flex flex-column">
