--- a/screenshots.html
+++ b/screenshots.html
@@ -15,6 +15,8 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/custom.css" rel="stylesheet" />
+    <link rel="canonical" href="https://jovarkos.org/screenshots.html">
+
 
 </head>
 
