loading="lazy" for images

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
                     <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4" src="assets/profile.jpg"
-                                alt="Lucas Burlingham's GitHub Profile Picture" />
+                                alt="Lucas Burlingham's GitHub Profile Picture" loading="lazy" />
                             <h5 class="fw-bolder">Lucas Burlingham</h5>
                             <div class="fst-italic text-muted">Founder &amp; Head of Development</div>
                         </div>
@@ -126,7 +126,7 @@
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
                                 src="https://avatars.githubusercontent.com/u/53598550?v=4"
-                                alt="cliffniff's GitHub Profile picture" />
+                                alt="cliffniff's GitHub Profile picture" loading="lazy" />
                             <h5 class="fw-bolder">cliffniff</h5>
                             <div class="fst-italic text-muted">Freelance Developer</div>
                         </div>
@@ -134,7 +134,7 @@
                     <div class="col mb-5 mb-5 mb-sm-0">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4" src="assets/amoldybuffalo.png"
-                                alt="AmoldyBuffalo's GitHub Profile picture" />
+                                alt="AmoldyBuffalo's GitHub Profile picture" loading="lazy" />
                             <h5 class="fw-bolder">AmoldyBuffalo</h5>
                             <div class="fst-italic text-muted">Student &amp; Youtuber</div>
                         </div>
@@ -143,7 +143,7 @@
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
                                 src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
-                                alt="Generic Profile picture" />
+                                alt="Generic Profile picture" loading="lazy" />
                             <h5 class="fw-bolder">You</h5>
                             <div class="fst-italic text-muted"><a href="contact.html">Join us today!</a></div>
                         </div>
