--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 teens just starting a career in technolgy can build their skills and work as a team on
                                 something we all love - GNU/Linux."</div>
                             <div class="d-flex align-items-center justify-content-center">
-                                <img class="rounded-circle me-3 w-25 p-3" src="assets/profile.jpg"
+                                <img class="rounded-circle me-3 w-25 p-3" src="assets/profile.jpg" loading="lazy"
                                     alt="Lucas Burlingham's Profile Picture" />
                                 <div class="fw-bold">
                                     Lucas Burlingham
