--- a/screenshots.html
+++ b/screenshots.html
@@ -61,15 +61,16 @@
                 <div class="row gx-5">
                     <div class="col-lg-6">
                         <div class="position-relative mb-5">
-                            <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/gaming.png" alt="..." />
+                            <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/gaming.png" alt="..."
+                                loading="lazy" />
                             <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"
                                 href="https://supertuxkart.net/Main_Page">SuperTuxKart</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="position-relative mb-5">
-                            <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/system monitor.png"
-                                alt="..." />
+                            <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/system monitor.png" alt="..."
+                                loading="lazy" />
                             <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"
                                 href="https://apps.gnome.org">GNOME System
                                 Monitor</a>
@@ -77,7 +78,8 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="position-relative mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/Vivaldi.png" alt="..." />
+                            <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/Vivaldi.png" alt="..."
+                                loading="lazy" />
                             <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"
                                 href="https://vivaldi.com">Vivaldi
                                 Browser</a>
@@ -85,7 +87,8 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="position-relative">
-                            <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/GNOME.png" alt="..." />
+                            <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/GNOME.png" alt="..."
+                                loading="lazy" />
                             <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"
                                 href="https://forty.gnome.org">GNOME 40
                                 <span class="text-muted fw-light fs-5">.4</span></a>
