--- a/about.html
+++ b/about.html
@@ -174,6 +174,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script data-goatcounter="https://jovarkos.goatcounter.com/count" src="js/scripts.js"></script>
+    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 </body>
 
 </html>
