--- a/about.html
+++ b/about.html
@@ -141,6 +141,14 @@
                     </div>
                     <div class="col mb-5">
                         <div class="text-center">
+                            <img class="img-fluid rounded-circle mb-4 px-4" src="assets/entity.png"
+                                alt="Capybara as a profile picture" loading="lazy" />
+                            <h5 class="fw-bolder">Entity</h5>
+                            <div class="fst-italic text-muted">Student</div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
                                 src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
                                 alt="Generic Profile picture" loading="lazy" />
