--- a/about.html
+++ b/about.html
@@ -90,18 +90,23 @@
                 </div>
             </div>
         </section>
-        <!-- why teens section -->
+        <!-- why jovarkos distro section -->
         <section class="py-5">
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0"
                             src="assets/gaming.png" alt="..." /></div>
                     <div class="col-lg-6">
-                        <h2 class="fw-bolder">Why teens?</h2>
-                        <p class="lead fw-normal text-muted mb-0">Teens are the people who will shape the future. By
-                            sharing the information we as teens gather, we educate ourselves and the generations to
-                            come. Plus, COVID shoudn't last forever, and we ought to do <u><i>something</i></u> other
-                            than gaming. 😉</p>
+                        <h2 class="fw-bolder">Why a new distro?</h2>
+                        <p class="lead fw-normal text-muted mb-0">Linux users like choices. We give you plenty of
+                            choices, without shoving it all in your face. Find the way <i><b><u>you</u></b></i> want to
+                            install the system, and feel free to uninstall our curated selection of utilities and
+                            applications. <i>JovarkOS is <b><u>yours.</u></b></i>
+                        <div class="form-check">
+                            <input class="form-check-input" name="" id="" type="checkbox" value="checkedValue"
+                                aria-label="Text for screen reader">
+                        </div>
+                        </p>
                     </div>
                 </div>
             </div>
