--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </h1>
                             <p class="lead fw-normal text-white-50 mb-4">A GNU/Linux
                                 distribution based on Arch Linux with the goal of providing stability and speed for
-                                those who are comfortable using a computer. It is built by teens, for teens.
+                                those who are comfortable using a computer. It is built by mostly teens, for everyone!
                             </p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3"
@@ -131,7 +131,8 @@
                     <div class="col-lg-10 col-xl-7">
                         <div class="text-center">
                             <div class="fs-4 mb-4 fst-italic">"I would like the JovarkOS project to be a place where
-                                teens just starting a career in technolgy can build their skills and work as a team on
+                                teens (and everyone who wants to contribute) just starting a career in technolgy can
+                                build their skills and work as a team on
                                 something we all love - GNU/Linux."</div>
                             <div class="d-flex align-items-center justify-content-center">
                                 <img class="rounded-circle me-3 w-25 p-3" src="assets/profile.jpg" loading="lazy"
