Replace old .netlify.app domains with updated ones

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="download.html">Download</a></li>
-                        <li class="nav-item"><a class="nav-link"
-                                href="https://jovarkos-docs.netlify.app/#/">Documentation</a>
+                        <li class="nav-item"><a class="nav-link" href="https://docs.jovarkos.org/#/">Documentation</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
@@ -70,8 +69,8 @@
                                 those who are comfortable using a computer. It is built by mostly teens, for everyone!
                             </p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                <a class="btn btn-primary btn-lg px-4 me-sm-3"
-                                    href="https://jovarkos-docs.netlify.app/#/">Get Started</a>
+                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://docs.jovarkos.org/#/">Get
+                                    Started</a>
                                 <a class="btn btn-outline-light btn-lg px-4" href="download.html">Download Installer</a>
                             </div>
                         </div>
