--- a/screenshots.html
+++ b/screenshots.html
@@ -36,8 +36,7 @@
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="download.html">Download</a></li>
-                        <li class="nav-item"><a class="nav-link"
-                                href="https://jovarkos-docs.netlify.app/#/">Documentation</a>
+                        <li class="nav-item"><a class="nav-link" href="https://docs.jovarkos.org/#/">Documentation</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle active" id="navbarDropdownBlog" href="#" role="button"
