--- a/privacy.html
+++ b/privacy.html
@@ -42,8 +42,7 @@
                         <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="download.html">Download</a></li>
-                        <li class="nav-item"><a class="nav-link"
-                                href="https://jovarkos-docs.netlify.app/#/">Documentation</a>
+                        <li class="nav-item"><a class="nav-link" href="https://docs.jovarkos.org/#/">Documentation</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
@@ -224,7 +223,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script data-goatcounter="https://jovarkos.goatcounter.com/count" src="js/scripts.js"></script>
-<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 </body>
 
 </html>
