Update contact email
Use support@jovarkos.org email for contact.

--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                                             <p class="card-title">Still using Email?</p>
                                             <p class="card-subtitle text-muted mb-2 fst-italic fs-6">We do too...</p>
                                             <a class="btn btn-outline-secondary"
-                                                href="mailto:lucas@lucasburlingham.me">Email us!</a>
+                                                href="mailto:support@jovarkos.org">Email us!</a>
                                         </blockquote>
                                     </div>
                                 </div>
@@ -126,11 +126,11 @@
                             class="text-muted">Site Licensed under MIT</span> </div>
                 </div>
                 <div class="col-auto">
-                    <a class="link-light small" href="#!">Privacy</a>
-                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="#!" disabled>Privacy</a>
+                    <span class="text-white mx-1" disabled>&middot;</span>
                     <a class="link-light small" href="#!">Terms</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Contact</a>
+                    <a class="link-light small" href="#">Contact</a>
                 </div>
             </div>
         </div>
