--- a/download.html
+++ b/download.html
@@ -119,7 +119,7 @@
                                     Pro Support
                                 </div>
                                 <div class="mb-3">
-                                    <span class="display-4 fw-bold">>$10 </span>
+                                    <span class="display-4 fw-bold"><$10 </span>
                                 </div>
                                 <ul class="list-unstyled mb-4">
                                     <li class="mb-2">
