Revised hero subtext

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                             <h1 class="display-5 fw-bolder text-white mb-2">Welcome to JovarkOS,
                             </h1>
                             <p class="lead fw-normal text-white-50 mb-4">A GNU/Linux
-                                distribution based on Arch Linux with the goal of providing stability and speed for
-                                those who are comfortable using a computer. It is built by mostly teens, for everyone!
+                                distribution based on Arch Linux with the goal of providing stability and speed with
+                                minimal configuration nessasary. It is built by mostly teens, for everyone!
                             </p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://docs.jovarkos.org/#/">Get
