--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </h1>
                             <p class="lead fw-normal text-white-50 mb-4">A GNU/Linux
                                 distribution based on Arch Linux with the goal of providing stability and speed with
-                                minimal configuration nessasary. It is built by mostly teens, for everyone!
+                                minimal configuration necessary. It is built by mostly teens, for everyone!
                             </p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://docs.jovarkos.org/#/">Get
