--- a/about.html
+++ b/about.html
@@ -100,7 +100,10 @@
                         <p class="lead fw-normal text-muted mb-0">Linux users like choices. We give you plenty of
                             choices, without shoving it all in your face. Find the way <i><b><u>you</u></b></i> want to
                             install the system, and feel free to uninstall our curated selection of utilities and
-                            applications. <i>JovarkOS is <b><u>yours.</u></b></i>
+                            applications. <i>JovarkOS is <b><u>yours</u></b></i>. <span
+                                class="text-muted fst-italic fs-6">W
+                                even plan
+                                to include an application to help you manage said software!</span>
                         </p>
                     </div>
                 </div>
@@ -147,6 +150,17 @@
                             <div class="fst-italic text-muted">Student</div>
                         </div>
                     </div>
+                    <div class="col mb-5">
+                        <div class="text-center">
+                            <img class="img-fluid rounded-circle mb-4 px-4"
+                                src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
+                                alt="Generic Profile picture" loading="lazy" />
+                            <h5 class="fw-bolder">lyiriyah</h5>
+                            <div class="fst-italic text-muted"><a href="contact.html">Join us today!</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col mb-5">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
