--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
                             <div class="fst-italic text-muted">Freelance Developer</div>
                         </div>
                     </div>
-                    <div class="col mb-5 mb-5 mb-sm-0">
+                    <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4" src="assets/amoldybuffalo.png"
                                 alt="AmoldyBuffalo's GitHub Profile picture" loading="lazy" />
@@ -142,7 +142,7 @@
                             <div class="fst-italic text-muted">Student &amp; Youtuber</div>
                         </div>
                     </div>
-                    <div class="col mb-5">
+                    <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4" src="assets/entity.png"
                                 alt="Capybara as a profile picture" loading="lazy" />
@@ -150,13 +150,14 @@
                             <div class="fst-italic text-muted">Student</div>
                         </div>
                     </div>
-                    <div class="col mb-5">
+                    <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
                                 src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
                                 alt="Generic Profile picture" loading="lazy" />
                             <h5 class="fw-bolder">lyiriyah</h5>
-                            <div class="fst-italic text-muted"><a href="contact.html">Join us today!</a></div>
+                            <div class="fst-italic text-muted"><a href="https://tilde.club/~lyiriyah/"
+                                    target="_blank">https://tilde.club/~lyiriyah/</a></div>
                         </div>
                     </div>
                 </div>
