--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                             choices, without shoving it all in your face. Find the way <i><b><u>you</u></b></i> want to
                             install the system, and feel free to uninstall our curated selection of utilities and
                             applications. <i>JovarkOS is <b><u>yours</u></b></i>. <span
-                                class="text-muted fst-italic fs-6">W
+                                class="text-muted fst-italic fs-6">We
                                 even plan
                                 to include an application to help you manage said software!</span>
                         </p>
