--- a/about.html
+++ b/about.html
@@ -100,10 +100,7 @@
                         <p class="lead fw-normal text-muted mb-0">Linux users like choices. We give you plenty of
                             choices, without shoving it all in your face. Find the way <i><b><u>you</u></b></i> want to
                             install the system, and feel free to uninstall our curated selection of utilities and
-                            applications. <i>JovarkOS is <b><u>yours</u></b></i>. <span
-                                class="text-muted fst-italic fs-6">We
-                                even plan
-                                to include an application to help you manage said software!</span>
+                            applications. <i>JovarkOS is <b><u>yours</u></b></i>.
                         </p>
                     </div>
                 </div>
