Remove pricing cards

--- a/download.html
+++ b/download.html
@@ -61,8 +61,9 @@
         <section class="bg-light py-5">
             <div class="container px-5 my-5">
                 <div class="text-center mb-5">
-                    <h1 class="fw-bolder">Pay what you want</h1>
-                    <p class="lead fw-normal text-muted mb-0">Enjoy our product? Drop a couple bucks down below to pay
+                    <h1 class="fw-bolder">Download</h1>
+                    <p class="lead fw-normal text-muted mb-0 fs-6">Enjoy our product? Drop a couple bucks down below to
+                        pay
                         to keep our servers on!</p>
                 </div>
                 <div class="row gx-5 justify-content-center">
@@ -70,9 +71,10 @@
                     <div class="col-lg-6 col-xl-4">
                         <div class="card mb-5 mb-xl-0">
                             <div class="card-body p-5">
-                                <div class="small text-uppercase fw-bold text-muted">Free (Forever)</div>
+                                <div class="small text-uppercase fw-bold text-muted">ISO Download</div>
                                 <div class="mb-3">
-                                    <span class="display-5 fw-bold">$0</span>
+                                    <span class="display-5 fw-bold">JovarkOS <span class="text-muted fs-5">BETA</span>
+                                    </span>
                                 </div>
                                 <ul class="list-unstyled mb-4">
                                     <li class="mb-2">
@@ -97,11 +99,13 @@
                                     </li>
                                     <li class="mb-2 text-muted">
                                         <i class="bi bi-x"></i>
-                                        Priority support
+                                        Beta release
                                     </li>
                                     <li class="mb-2 text-muted">
                                         <i class="bi bi-x"></i>
-                                        Help over remote connection
+                                        <a href="https://github.com/JovarkOS/jovarkos-repo/issues/1"
+                                            target="_blank"><b>Breaking
+                                                issue:</b></a> Repo responding with 404.
                                     </li>
                                 </ul>
                                 <div class="d-grid"><a class="btn btn-outline-primary"
@@ -110,49 +114,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Pricing card pro support-->
-                    <div class="col-lg-6 col-xl-4">
-                        <div class="card mb-5 mb-xl-0">
-                            <div class="card-body p-5">
-                                <div class="small text-uppercase fw-bold">
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    Pro Support
-                                </div>
-                                <div class="mb-3">
-                                    <span class="display-4 fw-bold"><$10 </span>
-                                </div>
-                                <ul class="list-unstyled mb-4">
-                                    <li class="mb-2">
-                                        <i class="bi bi-check text-primary"></i>
-                                        <strong>Everything included in Free</strong>
-                                    </li>
-                                    <li class="mb-2">
-                                        <i class="bi bi-check text-primary"></i>
-                                        Priority Support
-                                    </li>
-                                    <li class="mb-2">
-                                        <i class="bi bi-check text-primary"></i>
-                                        Help over remote connection
-                                    </li>
-                                    <li class="mb-2">
-                                        <i class="bi bi-check text-primary"></i>
-                                        "Supporter" status + digital rewards
-                                    </li>
-                                    <li class="mb-2">
-                                        <i class="bi bi-check text-primary"></i>
-                                        Limited 12/6 direct contact
-                                    </li>
-                                    <li class="mb-2">
-                                        <i class="bi bi-check text-primary"></i>
-                                        Access to Discord Support server <span class="text-muted fw-light">*</span>
-                                    </li>
-                                </ul>
-                                <div class="d-grid"><a class="btn btn-primary"
-                                        href="https://www.paypal.com/donate?hosted_button_id=LUVK5HF3NWXK2"
-                                        disabled>Choose plan <i class="fab fa-paypal"></i></a></div>
-                            </div>
-                        </div>
-                    </div>
+
                     <!-- Pricing card pay what you want-->
                     <div class="col-lg-6 col-xl-4">
                         <div class="card">
@@ -164,7 +126,7 @@
                                 <ul class="list-unstyled mb-4">
                                     <li class="mb-2">
                                         <i class="bi bi-check text-primary"></i>
-                                        <strong>Everything included in Pro Support</strong>
+                                        <strong>You will be redirected to the download after donating.</strong>
                                     </li>
                                     <li class="mb-2">
                                         <i class="bi bi-check text-primary"></i>
@@ -181,8 +143,6 @@
                             </div>
                         </div>
                     </div>
-                    <span class="text-muted fw-light fs-6">* The Discord Support server is our normal server, but with
-                        more channels to aid in support</span>
                 </div>
             </div>
         </section>
