Fix discord link

--- a/contact.html
+++ b/contact.html
@@ -78,8 +78,8 @@
                                     </div>
                                     <div class="card-body">
                                         <p class="card-text">Fun and informational server for JovarkOS</p>
-                                        <button href="https://discord.gg/8jabsmuyU3"
-                                            class="btn btn-outline-primary card-link">Join!</button>
+                                        <a href="https://discord.gg/8jabsmuyU3"
+                                            class="btn btn-outline-primary card-link">Join!</a>
                                     </div>
                                 </div>
                             </div>
